fixed the navbar for mobile

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             </div>
         
                 <button id="navbar_mobile-bar" class="navbar_mobile-bar">
-                    <div id="nav_line1" class="nav_line"></div>
-                    <div id="nav_line2" class="nav_line"></div>
-                    <div class="nav_line"></div>
+                    <div id="nav_line" class="line1"></div>
+                    <div id="nav_line" class="line2"></div>
+                    <div class="line3"></div>
                 </button>
 
             <div class="about-me">
@@ -186,10 +186,9 @@
                 <button id="Button" class="contact_button">More skills</button>
             </section>
             <section class="framework" id="framework">
-                <div class="skills_info">
-                    <p class="skills_greeting">TECHNOLOGIES</p>
-                </div>
-                
+                <p>
+                    STACK
+                </p>
                 <div class="orbit_parent">
                     <div class="orbit">  
                         <div class="center">
