--- a/index.html
+++ b/index.html
@@ -211,6 +211,8 @@
                             <li class="orbit_object"><img src="./icons/nodejs-icon.svg" alt=""></li>
                             <li class="orbit_object"><img src="./icons/typescript.svg" alt=""></li>
                             <li class="orbit_object"><img src="./icons/redux.svg" alt=""></li>
+
+                            <li class="orbit_object"><img src="./icons/vuejs.svg" alt=""></li>
                         </ul>
                     </div>
                     <div class="orbit1"></div>
