--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
                 <p class="info">
                      A movie and TV shows website that provides information on such said shows with the Next.JS and SASS.
                 </p>
-                <div class="icon_globe">
-                </div>
+                <a class="icon_globe" href="https://new-app-delta.vercel.app/">
+                </a>
                 <a href="https://github.com/AgoroAkorede/hulu-app" class="icon_git"> 
                 </a>
             </div>
@@ -285,8 +285,8 @@
                     Gives a 3 days weather forecast of different locations on the earth 
                 </p>
                 <div class="icons" id="icons">
-                    <div id="icon" class="icon_globe"></div>
-                    <div id="icon" class="icon_git"></div>
+                    <a id="icon" href="https://weather-app-s1k3.vercel.app/" class="icon_globe"></a>
+                    <a id="icon" href="https://github.com/AgoroAkorede/weather_app" class="icon_git"></a>
                 </div>
             
             </div>
@@ -305,7 +305,7 @@
                 </p>
                 <div class="icons" id="icons">
                     <div id="icon" class="icon_globe"></div>
-                    <div id="icon" class="icon_git"></div>
+                    <a id="icon" href="https://github.com/AgoroAkorede/google__Clone" class="icon_git"></a>
                 </div>
             
             </div>
