feat: Changed the main theme

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <link rel="stylesheet" href="./footer.css">
         <link rel="stylesheet" href="./projects.css">
         <script defer src="./script.js"></script>
+        <script defer src="./script.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js"></script>
         <title>Agoro Akorede</title>
         
     </head>
@@ -269,6 +273,26 @@
                 <a class="icon_globe" href="https://new-app-delta.vercel.app/">
                 </a>
                 <a href="https://github.com/AgoroAkorede/hulu-app" class="icon_git"> 
+                </a>
+            </div>
+            <div class="project_item">
+                <div class="stack">
+                    <div class="stack_item">Vue3</div>
+                    <div class="stack_item">VueX</div>
+                    <div class="stack_item">JS</div>
+                    <div class="stack_item">Typescript</div>
+                    <div class="stack_item">Canvas</div>
+                </div>
+                <img src="./assets/Drawing App.png" alt="calculator image">
+            
+                <div class="title">Drawing App</div>
+                <div class="effect"></div>
+                <p class="info">
+                     This is an simple web app that makes use of canvas.js to make drawings.
+                </p>
+                <a class="icon_globe" href="https://drawing3-5i5owwy2r-agoroakorede.vercel.app/">
+                </a>
+                <a class="icon_git" href="https://github.com/AgoroAkorede/drawing"> 
                 </a>
             </div>
             <div class="project_item">
